--- a/src/app/modules/wie/pages/wie.component.html
+++ b/src/app/modules/wie/pages/wie.component.html
@@ -43,7 +43,7 @@
     </mat-accordion>
     <hr>
     <h2 class="section-title ">{{'WIE.CONTACT.TITLE' | translate}}</h2>
-    <div class="flex flex-center justify-content-around p-3">
+    <div class="flex-wrap gap-1 flex flex-center justify-content-around p-3">
       <a href="https://www.linkedin.com/company/wie-itba/posts/" class="contact-link">
         <i class="fab fa-linkedin-in"></i>
       </a>
