fix: general responsivness

--- a/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.css
+++ b/src/app/modules/asimov-cup/pages/asimov-cup/asimov-cup.component.css
@@ -405,21 +405,21 @@ h3 {
 }
 
 .course-title {
-  font-size: calc(1.5vw + 1.2rem);
+  font-size: 2rem;
   font-weight: 400;
   color: #862633;
   letter-spacing: 1px;
 }
 
 .title {
-  font-size: calc(1.5vw + 1rem);
+  font-size: 2rem;
   font-weight: 400;
   color: #862633;
   letter-spacing: 1px;
 }
 
 .subtitle {
-  font-size: calc(0.7vw + 0.7rem);
+  font-size: 1.5rem;
   color: var(--bs-ieee-bright-blue);
   font-weight: 600;
   margin-top: 0.5rem;
@@ -452,9 +452,14 @@ h3 {
 }
 
 .section-title {
-  font-size: calc(0.7vw + 0.7rem);
+  font-size: 1.5rem;
   color: #862633;
   font-weight: 600;
+  margin: 0;
+}
+
+p {
+  padding: 0;
 }
 
 .list-section li::marker {
@@ -525,4 +530,10 @@ mat-panel-title {
 .image-section img {
   object-fit: contain;
   height: inherit;
+}
+
+@media (max-width: 770px) {
+  .course-title {
+      font-size: 1.7rem;
+  }
 }
