--- a/src/app/modules/bitcup/pages/bitcup/bitcup.component.html
+++ b/src/app/modules/bitcup/pages/bitcup/bitcup.component.html
@@ -15,7 +15,7 @@
   </div>
 
   <!-- formato -->
-  <div class="info">
+  <div class="info reversed">
     <div style="padding-right:3rem;">
       <img src="../../../../../assets/image/events/bitcup/competencia.png" height="160vmin" alt="Logo ITBA-IEEE">
     </div>
