--- a/src/app/modules/curso-python/pages/curso-python/curso-python.component.html
+++ b/src/app/modules/curso-python/pages/curso-python/curso-python.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-  <div class="topbottomLine" id="home" style="margin-bottom:2%">
+  <div class="topbottomLine" id="home">
     <div class="container">
       <div class="row">
         <div class="col-sm">
@@ -203,7 +203,7 @@
   <div class="tyc-section">
     <mat-expansion-panel class="mat-elevation-z0">
       <mat-expansion-panel-header>
-        <mat-panel-title class="course-subtitle">{{'TYC.TITLE' | translate}}</mat-panel-title>
+        <mat-panel-title class="faq-question my-2">{{'TYC.TITLE' | translate}}</mat-panel-title>
       </mat-expansion-panel-header>
       <h3 class="tyc-subtitle">{{'TYC.INTRO.TITLE' | translate}}</h3>
       <p class="tyc-text">{{'TYC.INTRO.TEXT' | translate}}</p>
