--- a/src/app/modules/emb/page/emb/emb.component.css
+++ b/src/app/modules/emb/page/emb/emb.component.css
@@ -55,9 +55,10 @@
 }
 
 .title {
-  margin: auto 0 auto 0;
+  margin: auto 0 1rem 0;
   font-weight: 600;
   font-size: 3rem;
+  line-height: 1;
 }
 
 .subtitle {
