--- a/src/app/modules/iot/pages/iot/iot.component.html
+++ b/src/app/modules/iot/pages/iot/iot.component.html
@@ -2,7 +2,7 @@
   <div class="banner">
     <img src="../../../../../assets/image/events/iot/iot-banner.jpeg" class="max-width" alt="Banner IOT" />
   </div>
-  <div class="top_bottom_line" id="home" style="margin-bottom:2%">
+  <div class="top_bottom_line" id="home" style="margin-bottom: 1rem">
     <div class="container">
       <div class="row">
         <div class="col-sm">
