--- a/src/app/modules/typescript/pages/typescript.component.css
+++ b/src/app/modules/typescript/pages/typescript.component.css
@@ -49,14 +49,14 @@ li > p{
 }
 
 .course-title {
-    font-size: calc(1.5vw + 1rem);
+    font-size: 2rem;
     font-weight: 400;
     color: var(--bs-ieee-bright-blue-80);
     letter-spacing: 1px;
 }
 
 .course-subtitle {
-    font-size: calc(0.7vw + 0.7rem);
+    font-size: 1.5rem;
     color: var(--bs-ieee-bright-blue);
     font-weight: 600;
     margin-top: 0.5rem;
@@ -202,3 +202,9 @@ mat-expansion-panel-header {
 mat-panel-title {
     color:var(--bs-ieee-bright-blue);
 }
+
+@media (max-width: 770px) {
+    .course-title {
+        font-size: 1.7rem;
+    }
+  }
