--- a/src/app/modules/iot/pages/iot/iot.component.css
+++ b/src/app/modules/iot/pages/iot/iot.component.css
@@ -44,14 +44,14 @@ h2{
 }
 
 .course-title {
-  font-size: calc(1.5vw + 1rem);
+  font-size: 2rem;
   font-weight: 400;
   color: var(--bs-ieee-bright-blue-80);
   letter-spacing: 1px;
 }
 
 .course-subtitle {
-  font-size: calc(0.7vw + 0.7rem);
+  font-size: 1.5rem;
   color: var(--bs-ieee-bright-blue);
   font-weight: 600;
   margin-top: 0.5rem;
@@ -172,4 +172,10 @@ mat-panel-title {
 }
 .goback-button:hover > .button-text{
   color: white !important;
+}
+
+@media (max-width: 770px) {
+  .course-title {
+      font-size: 1.7rem;
+  }
 }
