--- a/src/app/modules/ras/pages/ras/ras.component.css
+++ b/src/app/modules/ras/pages/ras/ras.component.css
@@ -95,9 +95,10 @@
 }
 
 .title {
-  margin: auto 0 auto 0;
+  margin: auto 0 1rem 0;
   font-weight: 600;
   font-size: 3rem;
+  line-height: 1;
 }
 
 .subtitle {
@@ -121,6 +122,11 @@
 }
 
 @media (max-width: 770px) {
+  .title {
+    width: 100%;
+    text-align: center;
+    margin-bottom: .5rem;
+  }
   .rasLogo {
     width: 50vw;
   }
