--- a/src/app/modules/typescript/pages/typescript.component.html
+++ b/src/app/modules/typescript/pages/typescript.component.html
@@ -28,7 +28,7 @@
     <h2 class="course-subtitle">{{ 'TYPESCRIPT.SYLLABUS.TITLE' | translate}} </h2>
     <div class="syllabus">
       <mat-card class="card">
-        <mat-card-header>
+        <mat-card-header style="height: unset;">
           <div mat-card-avatar class="header-image"></div>
           <mat-card-title><b>{{ 'TYPESCRIPT.SYLLABUS.1.TEXT' | translate}}</b></mat-card-title>
         </mat-card-header>
@@ -42,7 +42,7 @@
         </mat-card-content>
       </mat-card>
       <mat-card class="card">
-        <mat-card-header>
+        <mat-card-header style="height: unset;">
           <div mat-card-avatar class="header-image"></div>
           <mat-card-title><b>{{ 'TYPESCRIPT.SYLLABUS.2.TEXT' | translate}}</b></mat-card-title>
         </mat-card-header>
@@ -63,7 +63,7 @@
     </div>
     <div class="syllabus">
       <mat-card class="card">
-        <mat-card-header>
+        <mat-card-header style="height: unset;">
           <div mat-card-avatar class="header-image"></div>
           <mat-card-title><b>{{ 'TYPESCRIPT.SYLLABUS.3.TEXT' | translate}}</b></mat-card-title>
         </mat-card-header>
@@ -77,7 +77,7 @@
         </mat-card-content>
       </mat-card>
       <mat-card class="card">
-        <mat-card-header>
+        <mat-card-header style="height: unset;">
           <div mat-card-avatar class="header-image"></div>
           <mat-card-title>
             <b>{{ 'TYPESCRIPT.SYLLABUS.4.TEXT' | translate}}</b>
