fix(register): register form responsiveness

--- a/src/app/modules/authentication/register/register.component.html
+++ b/src/app/modules/authentication/register/register.component.html
@@ -17,13 +17,13 @@
             <form id="singup-form">
               <div class="w-100">
                 <div class="row">
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <mat-form-field class="w-100">
                       <mat-label for="fname">{{ 'REGISTER.FIRST_NAME' | translate }}:</mat-label>
                       <input type="text" id="fname" required matInput>
                     </mat-form-field>
                   </div>
-                  <div class="col-6">
+                  <div class="col-12 col-sm-6">
                     <mat-form-field class="w-100">
                       <mat-label for="lname">{{ 'REGISTER.LAST_NAME' | translate }}:</mat-label>
                       <input type="text" id="lname" required matInput>
