fix: remove unused comments, sorting and final implementation

--- a/src/app/shared/components/individual-card/individual-card.component.html
+++ b/src/app/shared/components/individual-card/individual-card.component.html
@@ -6,10 +6,10 @@
 
     <ng-template #showProfile>
         <!-- Imagen principal -->
-        <img height="201" width="268" mat-card-image
-             [ngSrc]="person.photo" alt="Foto de {{person.name}}" loading="eager"
-             style="width: 100%; object-fit: contain;">
 
+        <img height="201" width="500" mat-card-image
+             [ngSrc]="person.photo" alt="Foto de {{person.name}}" loading="eager"
+             style="width: 280px; object-fit: cover;">
         <a>
             <div class="mask rgba-white-slight"></div>
         </a>
