--- a/src/app/modules/curso-python/pages/curso-python/curso-python.component.css
+++ b/src/app/modules/curso-python/pages/curso-python/curso-python.component.css
@@ -1,13 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
 
-
-.main-container {
-    padding: 10%;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
-    background-size: cover;
-}
-
 .not-available-background-color{
     background-color: lightgrey;
 }
@@ -71,14 +63,6 @@ h1 {
 .card-content {
     text-align: justify;
     font-size: 1.2em;
-}
-
-
-@media (max-width: 700px) {
-    .topbottomLine {
-        padding-top: 30%;
-    }
-
 }
 
 
@@ -243,16 +227,16 @@ img {
 }
 
 .course-title {
-    font-size: calc(1.5vw + 1rem);
+    font-size: 2rem;
     font-weight: 400;
     color: var(--bs-ieee-bright-blue-80);
     letter-spacing: 1px;
 }
 .course-subtitle {
-    font-size: calc(0.7vw + 0.7rem);
+    font-size: 1.5rem;
     color: var(--bs-ieee-bright-blue);
     font-weight: 600;
-    margin-top: 0.5rem;
+    margin-top: 1rem;
 }
 
 .ieeecard-button {
@@ -356,4 +340,10 @@ mat-expansion-panel-header {
 
 mat-panel-title {
     color:var(--bs-ieee-bright-blue);
+}
+
+@media (max-width: 770px) {
+    .course-title {
+        font-size: 1.7rem;
+    }
 }
