--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.css
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.css
@@ -1,13 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
 
-
-.main-container {
-  padding: 10%;
-  background: rgb(255, 255, 255);
-  background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
-  background-size: cover;
-}
-
 #icons {
   text-align: center;
   color: whitesmoke;
@@ -249,7 +241,7 @@ img {
 
 
 .goback-button {
-  font-size: calc(0.5vw + 0.5rem);
+  font-size: 1rem;
   font-weight: 600;
   margin-top: 0.25rem;
   padding:  0.7rem 1rem 0.7rem 1rem;
@@ -280,13 +272,13 @@ img {
 }
 
 .course-title {
-  font-size: calc(1.5vw + 1rem);
+  font-size: 2rem;
   font-weight: 400;
   color: var(--bs-ieee-bright-blue-80);
   letter-spacing: 1px;
 }
 .course-subtitle {
-  font-size: calc(0.7vw + 0.7rem);
+  font-size: 1.5rem;
   color: var(--bs-ieee-bright-blue);
   font-weight: 600;
   margin-top: 0.5rem;
@@ -376,4 +368,16 @@ mat-panel-title {
 background-color: lightgrey;
 border: solid gray;
 color: gray !important;
+}
+
+.schedule-cards {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 770px) {
+  .course-title {
+      font-size: 1.7rem;
+  }
 }
