--- a/src/app/modules/about-us/pages/about-us/about-us.component.css
+++ b/src/app/modules/about-us/pages/about-us/about-us.component.css
@@ -1,12 +1,3 @@
-.main-container {
-  padding: 10%;
-  background: rgb(255, 255, 255);
-  background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
-  background-size: cover;
-  padding-top: 160px;
-  line-height: 1.5;
-}
-
 .topbottomLine {
   border-top: var(--bs-ieee-bright-blue) 2px solid;
   border-bottom: var(--bs-ieee-bright-blue) 2px solid;
@@ -159,6 +150,7 @@
     align-items: center;
     gap: 2em;
     width: 100%;
+    flex-wrap: wrap;
 }
 
 
