--- a/src/app/modules/bitcup/pages/bitcup/bitcup.component.css
+++ b/src/app/modules/bitcup/pages/bitcup/bitcup.component.css
@@ -1,10 +1,3 @@
-.main-container {
-    padding: 10%;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
-    background-size: cover;
-}
-
 .info {
     margin-bottom: 4rem;
     display: flex;
@@ -177,15 +170,30 @@ mdb-card-text {
 }
 
 .course-title {
-    font-size: calc(1.5vw + 1rem);
+    font-size: 2rem;
     font-weight: 400;
     color: var(--bs-ieee-bright-blue-80);
     letter-spacing: 1px;
 }
 
 .course-subtitle {
-    font-size: calc(0.7vw + 0.7rem);
+    font-size: 1.5rem;
     color: var(--bs-ieee-bright-blue);
     font-weight: 600;
     margin-top: 0.5rem;
+}
+
+@media (max-width: 770px) {
+    .course-title {
+        font-size: 1.7rem;
+    }
+    .info {
+        flex-flow: column;
+    }
+    .info > div {
+        padding: 0 !important;
+    }
+    .reversed {
+        flex-flow: column-reverse
+    }
 }
