feat(news): frontend chips

--- a/src/app/modules/noticias/pages/noticias/noticias.component.css
+++ b/src/app/modules/noticias/pages/noticias/noticias.component.css
@@ -355,6 +355,18 @@ background-size: cover;
     top: 50%;
 }
 
+.tags-container {
+    margin-top: 1rem;
+    display: flex;
+    gap: .5rem;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.tags-container > p {
+    margin: 0
+}
+
 @media (min-width: 768px) {
 
 	.flexText{
