--- a/src/app/shared/components/news-card/news-card.component.html
+++ b/src/app/shared/components/news-card/news-card.component.html
@@ -5,6 +5,9 @@
     >
       <mat-card-content class="news-card-content">
           <mat-card-title class="clamp">{{ noticia.title }}</mat-card-title>
+          <div class="chip-container" *ngIf="noticia.tags.length > 0">
+            <mat-chip *ngFor="let tag of noticia.tags">{{tag}}</mat-chip>
+          </div>
           <mat-card-subtitle class="clamp align-end">{{ noticia.author }}</mat-card-subtitle>
       </mat-card-content>
   </mat-card>
