--- a/src/app/modules/noticias/pages/noticia/noticia.component.html
+++ b/src/app/modules/noticias/pages/noticia/noticia.component.html
@@ -1,68 +1,121 @@
-
 <div class="main-container">
-  <div *ngIf="(newsData$ | async) as newsData; else loadingSpinner" fxLayout="column" fxLayoutAlign="start center">
-    <div class="news-body" fxLayout="column" fxLayoutAlign="start center">
-      <div class="news-header mx-0 px-0">
-        <div class="d-flex flex-row mx-0">
-          <div class="d-flex flex-grow-1 flex-column">
-            <h1 class="my-0 px-0 my-0">{{newsData.title}}</h1>
-            <p>Por {{newsData.author}} {{(newsData.date) | date: 'mediumDate' }}</p>
-          </div>
-          <div class="d-flex flex-wrap align-self-baseline justify-content-end">
-            <div *ngFor="let tag of newsData.tags" class="badge news-tags mx-2 mb-1 p-2 d-none d-lg-block">{{tag}}</div>
-          </div>
-        </div>
-        <div class="d-flex flex-wrap align-self-baseline">
-          <div *ngFor="let tag of (newsData.tags)" class="badge news-tags mr-2 mb-1 p-2 d-lg-none">{{tag}}</div>
-        </div>
-
-      </div>
-      <hr class="header-divider">
-      <div class="news-intro py-3">
-        <p class="word-break text-justify" [innerHtml]="newsData.shortIntro"></p>
-      </div>
-      <div class="news-image">
-        <img mat-card-image ngSrc="{{newsData.imageUrl}}" width="1000" height="500"
-                      alt="Foto de noticia" style="top: 0; width: 100%; height: 100%;" />
-        <p class="pt-1">{{newsData.imageText}}</p>
-      </div>
-      <div class="news-content word-break py-5">
-        <div [innerHTML]="newsData.content"></div>
-      </div>
-      <div class="news-ratings">
-        <h2>{{"NEWS.RATING" | translate}}</h2>
-        <mat-chip-listbox *ngIf="newsData !== undefined"  aria-label="Emoji selection">
-          <div *ngFor="let emoji of emojisList; index as i">
-            <mat-chip-option [disabled]="!isSelected(i) && cookieValue !== ''" [selected]="isSelected(i)" (click)="rateNews(emoji, i)">
-              {{newsData.ratings[i]}} <ngx-emoji [emoji]="{ id: emoji, skin: 3 }" size="15"></ngx-emoji>
-            </mat-chip-option>
-          </div>
-        </mat-chip-listbox>
-      </div>
-
-    </div>
-    <div class="recomended-news" fxLayout="column" fxLayoutAlign="start center">
-      <div class="recomended-news-area" fxLayout="column" fxLayoutAlign=" start">
-        <div class="recomended-news-header">
-          <h1>{{"NEWS.RECOMMENDED" | translate}}</h1>
-          <hr class="title-divider" />
-        </div>
-        <div class="news-grid col">
-          <div *ngFor="let noticia of (recommendedNews$ | async)" class="recommended-news-card">
-            <div class="col-sm margin-top">
-              <app-news-card [noticia]="noticia"></app-news-card>
+    <div *ngIf="(newsData$ | async) as newsData; else newsSkeleton" fxLayout="column" fxLayoutAlign="start center">
+        <div class="news-body" fxLayout="column" fxLayoutAlign="start center">
+            <div class="news-header mx-0 px-0">
+                <div class="d-flex flex-row mx-0">
+                    <div class="d-flex flex-grow-1 flex-column">
+                        <h1 class="my-0 px-0 my-0">{{newsData.title}}</h1>
+                        <p>Por {{newsData.author}} {{(newsData.date) | date: 'mediumDate' }}</p>
+                    </div>
+                    <div class="d-flex flex-wrap align-self-baseline justify-content-end">
+                        <div *ngFor="let tag of newsData.tags" class="badge news-tags mx-2 mb-1 p-2 d-none d-lg-block">{{tag}}</div>
+                    </div>
+                </div>
+                <div class="d-flex flex-wrap align-self-baseline">
+                    <div *ngFor="let tag of (newsData.tags)" class="badge news-tags mr-2 mb-1 p-2 d-lg-none">{{tag}}</div>
+                </div>
             </div>
-          </div>
+            <hr class="header-divider">
+            <div class="news-intro py-3">
+                <p class="word-break text-justify" [innerHtml]="newsData.shortIntro"></p>
+            </div>
+            <div class="news-image">
+                <img mat-card-image ngSrc="{{newsData.imageUrl}}" width="1000" height="500"
+                     alt="Foto de noticia" style="top: 0; width: 100%; height: 100%;" />
+                <p class="pt-1">{{newsData.imageText}}</p>
+            </div>
+            <div class="news-content word-break py-5">
+                <div [innerHTML]="newsData.content"></div>
+            </div>
+            <div class="news-ratings">
+                <h2>{{"NEWS.RATING" | translate}}</h2>
+                <mat-chip-listbox *ngIf="newsData !== undefined"  aria-label="Emoji selection">
+                    <div *ngFor="let emoji of emojisList; index as i">
+                        <mat-chip-option [disabled]="!isSelected(i) && cookieValue !== ''" [selected]="isSelected(i)" (click)="rateNews(emoji, i)">
+                            {{newsData.ratings[i]}} <ngx-emoji [emoji]="{ id: emoji, skin: 3 }" size="15"></ngx-emoji>
+                        </mat-chip-option>
+                    </div>
+                </mat-chip-listbox>
+            </div>
         </div>
-      </div>
-      <button type="button" class="btn btn-primary rounded-1 btn-lg more-news-btn" [routerLink]="['/noticias/']" >
-        {{"NEWS.MORENEWS" | translate}}
-      </button>
+        <div class="recomended-news" fxLayout="column" fxLayoutAlign="start center">
+            <div class="recomended-news-area" fxLayout="column" fxLayoutAlign=" start">
+                <div class="recomended-news-header">
+                    <h1>{{"NEWS.RECOMMENDED" | translate}}</h1>
+                    <hr class="title-divider" />
+                </div>
+                <div class="news-grid col">
+                    <div *ngFor="let noticia of (recommendedNews$ | async)" class="recommended-news-card">
+                        <div class="col-sm margin-top">
+                            <app-news-card [noticia]="noticia"></app-news-card>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button type="button" class="btn btn-primary rounded-1 btn-lg more-news-btn" [routerLink]="['/noticias/']">
+                {{"NEWS.MORENEWS" | translate}}
+            </button>
+        </div>
     </div>
-  </div>
-  <ng-template #loadingSpinner class="screen-height">
-    <app-loading-spinner>
-    </app-loading-spinner>
-  </ng-template>
-</div>
+    <ng-template #newsSkeleton>
+        <div class="flex-column justify-content-start align-items-center">
+            <div class="news-body m-auto flex-column justify-content-start align-items-center">
+                <div class="news-header mx-0 px-0">
+                    <div class="d-flex flex-row mx-0">
+                        <div class="d-flex flex-grow-1 flex-column">
+                            <span class="my-0 px-0 my-0">
+                                <ngx-skeleton-loader [theme]="{ height: '32px', width: '45%' }"></ngx-skeleton-loader>
+                            </span>
+                            <ngx-skeleton-loader [theme]="{ height: '21px', width: '15%' }"></ngx-skeleton-loader>
+                        </div>
+                        <div class="d-flex flex-wrap align-self-baseline justify-content-end">
+                            <div class="d-none d-lg-block">
+                                <ngx-skeleton-loader count="3" appearance="circle" [theme]="{ width: '70px', height: '27px', 'border-radius': '5px' }"></ngx-skeleton-loader>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-wrap align-self-baseline">
+                        <div class="d-lg-none">
+                            <ngx-skeleton-loader count="3" appearance="circle" [theme]="{ width: '70px', height: '27px', 'border-radius': '5px' }"></ngx-skeleton-loader>
+                        </div>
+                    </div>
 
+                </div>
+                <hr class="header-divider">
+                <div class="news-intro py-3">
+                    <ngx-skeleton-loader count="3" [theme]="{ height: '23px' }"></ngx-skeleton-loader>
+                </div>
+
+                <div class="flex-column justify-content-start align-items-center">
+                    <div>
+                        <ngx-skeleton-loader appearance="circle" [theme]="{ width: '80%', height: '400px', top: 0, 'border-radius': 0 }"></ngx-skeleton-loader>
+                    </div>
+                    <div>
+                        <ngx-skeleton-loader class="pt-1" [theme]="{ width: '10%' }"></ngx-skeleton-loader>
+                    </div>
+                </div>
+                <span *ngFor="let num of [0, 1, 2]">
+                    <div class="news-content word-break py-5">
+                        <ngx-skeleton-loader count="10"></ngx-skeleton-loader>
+                    </div>
+                </span>
+            </div>
+            <div class="recomended-news" fxLayout="column" fxLayoutAlign="start center">
+                <div class="recomended-news-area" fxLayout="column" fxLayoutAlign=" start">
+                    <div class="recomended-news-header">
+                        <h1>{{"NEWS.RECOMMENDED" | translate}}</h1>
+                        <hr class="title-divider" />
+                    </div>
+                    <div class="news-grid col">
+                        <span *ngFor="let num of [0, 1]">
+                            <ngx-skeleton-loader appearance="circle" [theme]="{ width: '80%', height: '400px', top: 0, 'border-radius': 0 }"></ngx-skeleton-loader>
+                        </span>
+                    </div>
+                </div>
+                <button type="button" class="btn btn-primary rounded-1 btn-lg more-news-btn" [routerLink]="['/noticias/']" >
+                    {{"NEWS.MORENEWS" | translate}}
+                </button>
+            </div>
+        </div>
+    </ng-template>
+</div>
