fix(iot): carrousell variable widths and imgbb (#59)
* fix(iot): carrousell variable widths and imgbb

* fix carrousel card class

* fix(iot): image preload

---------

Co-authored-by: Fegrant <nicolasbirsa333@gmail.com>

--- a/src/app/modules/iot/pages/iot/iot.component.html
+++ b/src/app/modules/iot/pages/iot/iot.component.html
@@ -34,11 +34,11 @@
 
   <div class="section">
     <h2 class="course-subtitle">{{ 'IOT.GALLERY_TITLE' | translate }}</h2>
-    <swiper [config]="swiperConfig" class="carousel-wrapper">
-      <ng-template swiperSlide *ngFor="let image of images">
+    <swiper [config]="swiperConfig" class="carousel-wrapper" *ngIf="swiperOn">
+      <ng-template swiperSlide class="carrousel-card" *ngFor="let image of imageLinks">
         <img data-src="{{image}}"
              data-background="../../../../../assets/image/events/python-introductory/cursopython.jpg" class="news-card-img"
-             alt="IoT image" />
+             alt="IoT image" loading="lazy" />
       </ng-template>
     </swiper>
   </div>
