--- a/src/styles.css
+++ b/src/styles.css
@@ -8,9 +8,9 @@
   src: url('assets/fonts/OpenSans-Regular.ttf') format('truetype');
 }
 
-html, body { 
-  height: 100%; 
-  scroll-behavior: auto !important; 
+html, body {
+  height: 100%;
+  scroll-behavior: auto !important;
 }
 body { margin: 0; font-family: "Open sans", "Helvetica Neue", sans-serif; line-height: 1.5; }
 p { line-height: 1.5; }
@@ -25,4 +25,8 @@ p { line-height: 1.5; }
   background: linear-gradient(to bottom, #f0f0f0 0%, white 100%);
   background-size: cover;
   line-height: 1.5;
+}
+
+.carrousel-card {
+  width: fit-content !important;
 }
