--- a/src/app/modules/noticias/pages/noticias/noticias.component.html
+++ b/src/app/modules/noticias/pages/noticias/noticias.component.html
@@ -23,7 +23,7 @@
   <div class="tags-container" *ngIf="!showLoadingSpinner">
     <p>Filtrar por tags:</p>
     <mat-chip-listbox aria-label="Tags" (change)="onTagSelect($event)" multiple>
-      <mat-chip-option *ngFor="let tag of tagsObs | async">{{tag}}</mat-chip-option>
+      <mat-chip-option *ngFor="let tag of tagsObs | async" [selected]="isSelectedTag(tag)">{{tag}}</mat-chip-option>
     </mat-chip-listbox>
   </div>
   <hr *ngIf="!showLoadingSpinner">
@@ -31,7 +31,7 @@
   <div class="row news-grid">
     <div *ngFor="let noticia of newsData">
       <div class="col-sm margin-top">
-        <app-news-card [noticia]="noticia"></app-news-card>
+        <app-news-card [noticia]="noticia" [center]="true"></app-news-card>
       </div>
     </div>
   </div>
