chore(team): target _blank

--- a/src/app/shared/components/individual-card/individual-card.component.html
+++ b/src/app/shared/components/individual-card/individual-card.component.html
@@ -29,11 +29,11 @@
 
           <div class="iconContainer">
             <!-- Linkedin -->
-            <a class="cardIcon" href="{{person.linkedin}}">
+            <a class="cardIcon" href="{{person.linkedin}}" target="_blank">
               <i class="fab fa-lg fa-linkedin"></i>
             </a>
             <!-- Mail -->
-            <a class="cardIcon" href="mailto:{{person.mail}}">
+            <a class="cardIcon" href="mailto:{{person.mail}}" target="_blank">
               <i class="fas fa-lg fa-envelope"></i>
             </a>
           </div>
